added buttons to the view, need images for buttons and code

--- a/usefulAppMcCain/Base.lproj/Main.storyboard
+++ b/usefulAppMcCain/Base.lproj/Main.storyboard
@@ -681,25 +681,92 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zdk-DG-UcH">
                                         <rect key="frame" x="0.0" y="345.66666666666669" width="393" height="180.33333333333331"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMc-73-4xO">
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="sQb-7F-r1x">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="180.33333333333334"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JuM-id-c1h">
-                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="180.33333333333334"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" image="engine.combustion.fill" catalog="system">
-                                                            <color key="baseForegroundColor" systemColor="systemOrangeColor"/>
-                                                        </buttonConfiguration>
-                                                    </button>
+                                                    <stackView opaque="NO" contentMode="center" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hMc-73-4xO">
+                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="90"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yj4-Vb-Dkq">
+                                                                <rect key="frame" x="0.0" y="0.0" width="98.333333333333329" height="90"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Check Engine"/>
+                                                                <connections>
+                                                                    <action selector="checkEngineWarningAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="lXK-hu-tgh"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NBA-yF-r2o">
+                                                                <rect key="frame" x="98.333333333333343" y="0.0" width="98.333333333333343" height="90"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Tire Pressure"/>
+                                                                <connections>
+                                                                    <action selector="tirePressureAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="jIW-rB-axS"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c3B-Xz-g6V">
+                                                                <rect key="frame" x="196.66666666666666" y="0.0" width="97.999999999999972" height="90"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Battery"/>
+                                                                <connections>
+                                                                    <action selector="batteryAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="YPb-va-M3u"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t2m-2E-Ji5">
+                                                                <rect key="frame" x="294.66666666666669" y="0.0" width="98.333333333333314" height="90"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Brake Warning"/>
+                                                                <connections>
+                                                                    <action selector="brakeWarningAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="4K8-TV-JCE"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="center" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0vF-Hg-xoJ">
+                                                        <rect key="frame" x="0.0" y="89.999999999999943" width="393" height="90.333333333333314"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZvO-tU-mpd">
+                                                                <rect key="frame" x="0.0" y="0.0" width="98.333333333333329" height="90.333333333333329"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="ABS"/>
+                                                                <connections>
+                                                                    <action selector="aBSAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="nn0-Nf-6a8"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hgf-Kh-EoK">
+                                                                <rect key="frame" x="98.333333333333343" y="0.0" width="98.333333333333343" height="90.333333333333329"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Oil"/>
+                                                                <connections>
+                                                                    <action selector="oilAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="Euf-rc-hWT"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67D-3O-Ntz">
+                                                                <rect key="frame" x="196.66666666666666" y="0.0" width="97.999999999999972" height="90.333333333333329"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Airbag"/>
+                                                                <connections>
+                                                                    <action selector="airbagAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="yJg-BA-4xF"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cuC-Ds-rcG">
+                                                                <rect key="frame" x="294.66666666666669" y="0.0" width="98.333333333333314" height="90.333333333333329"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" title="Traction Control"/>
+                                                                <connections>
+                                                                    <action selector="tractionControlAction:" destination="gmq-sw-fNR" eventType="touchUpInside" id="LE9-pc-OGc"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                    </stackView>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="hMc-73-4xO" secondAttribute="trailing" id="41p-fT-fr9"/>
-                                            <constraint firstItem="hMc-73-4xO" firstAttribute="top" secondItem="zdk-DG-UcH" secondAttribute="top" id="Lkq-5s-H9X"/>
-                                            <constraint firstAttribute="bottom" secondItem="hMc-73-4xO" secondAttribute="bottom" id="Qri-5D-8OO"/>
-                                            <constraint firstItem="hMc-73-4xO" firstAttribute="leading" secondItem="zdk-DG-UcH" secondAttribute="leading" id="e0U-0f-aM6"/>
+                                            <constraint firstItem="sQb-7F-r1x" firstAttribute="top" secondItem="zdk-DG-UcH" secondAttribute="top" id="3HE-jS-Cte"/>
+                                            <constraint firstItem="sQb-7F-r1x" firstAttribute="leading" secondItem="zdk-DG-UcH" secondAttribute="leading" id="keO-3X-FFX"/>
+                                            <constraint firstAttribute="bottom" secondItem="sQb-7F-r1x" secondAttribute="bottom" id="tDx-Zw-l1h"/>
+                                            <constraint firstAttribute="trailing" secondItem="sQb-7F-r1x" secondAttribute="trailing" id="thT-f8-mhw"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rq0-5Z-Xbq">
@@ -1164,16 +1231,16 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
